--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "@typescript-eslint/interface-name-prefix": 0,
     "react/prop-types": 0,
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/explicit-function-return-type": "off"
