extract ToolBar to other file and create Tools folder for single tool, extract timelines.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
   "include": [
     "src",
     "typings/styled-cmp.d.ts",
-    "typings/react-app-env.d.ts"
+    "typings/react-app-env.d.ts",
+    "typings/HTMLElementEvent.d.ts"
   ]
 }
