--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "react-hooks/exhaustive-deps": 0,
     "react/display-name": 0,
     "@typescript-eslint/no-empty-function": 0,
     "react/jsx-closing-tag-location": 0,
