--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.0.1",
     "eslint-plugin-react-hooks": "0.0.0-d7382b6c4",
     "gsap": "^3.2.6",
+    "immer": "^6.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
