--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - checkout
       - run: npm i
+      - run: npm t
       - run: npm run build
       - aws-s3/sync:
           from: build
