--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 cp build/ s3://video-player123 --recursive"
+    "deploy": "aws s3 cp build/ s3://video-player123 --recursive",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
